--- a/article-preview-component/css/style.css
+++ b/article-preview-component/css/style.css
@@ -249,12 +249,17 @@ p {
   object-position: center;
 }
 .card__content {
-  padding: 1.5rem;
+  padding: 2.5rem;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
 @media (min-width: 48rem) {
+  .card__content {
+    padding: 4rem;
+  }
+}
+@media (min-width: 64rem) {
   .card__content {
     padding: 2rem;
   }
@@ -397,7 +402,6 @@ p {
 
 @media (max-width: 47.9375rem) {
   .card__footer {
-    padding: 1rem 1.5rem;
     transition: background-color var(--transition-default);
     position: relative;
     z-index: 1;
