--- a/article-preview-component/css/style.css
+++ b/article-preview-component/css/style.css
@@ -319,9 +319,16 @@ p {
 }
 .share-button.active {
   background-color: hsl(212, 17%, 51%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .share-button.active img {
   filter: brightness(5);
+  position: relative;
+  margin: 0;
+  top: 0;
+  left: 0;
 }
 .share-button img {
   width: 15px;
@@ -355,7 +362,7 @@ p {
   overflow: visible;
 }
 .share-popup__text {
-  text-align: center;
+  text-align: left;
   margin-right: 4px;
 }
 @media (min-width: 48rem) {
@@ -435,6 +442,11 @@ p {
     border-bottom-left-radius: var(--card-border-radius);
     border-bottom-right-radius: var(--card-border-radius);
     z-index: 90;
+    position: absolute;
+    bottom: 0;
+    left: 25px;
+    right: 0;
+    width: 100%;
   }
   .card__footer.share-active .avatar,
   .card__footer.share-active .user-info {
@@ -456,7 +468,7 @@ p {
     z-index: 100;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     overflow: visible;
     max-width: 100%;
@@ -466,20 +478,33 @@ p {
   }
   .card__footer.share-active .share-popup__text {
     flex: 0 0 auto;
-    text-align: center;
-    margin-right: 0;
+    text-align: left;
+    margin-right: 1rem;
   }
   .card__footer.share-active .share-popup__socials {
-    flex: 1;
-    justify-content: center;
-    margin: 0 1rem;
+    flex: 0 0 auto;
+    justify-content: flex-start;
+    margin: 0;
+    margin-right: auto;
   }
   .card__footer.share-active .share-button {
     flex: 0 0 auto;
     background-color: hsl(212, 17%, 51%);
+    display: flex;
+    position: absolute;
+    right: 1.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: auto;
+    width: 32px;
+    height: 32px;
+    align-items: center;
+    justify-content: center;
   }
   .card__footer.share-active .share-button img {
     filter: brightness(5);
+    position: relative;
+    margin: 0;
   }
 }
 :root {
