--- a/article-preview-component/scss/components/_card.scss
+++ b/article-preview-component/scss/components/_card.scss
@@ -105,9 +105,16 @@
 
   &.active {
     background-color: v.$color-grey-500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     img {
       filter: brightness(5);
+      position: relative; // Ensure proper positioning
+      margin: 0; // Remove any margin that might affect centering
+      top: 0; // Reset any top positioning
+      left: 0; // Reset any left positioning
     }
   }
 
