--- a/article-preview-component/css/style.css
+++ b/article-preview-component/css/style.css
@@ -480,6 +480,7 @@ p {
     flex: 0 0 auto;
     text-align: left;
     margin-right: 1rem;
+    padding-left: 1rem;
   }
   .card__footer.share-active .share-popup__socials {
     flex: 0 0 auto;
