--- a/article-preview-component/scss/components/_share.scss
+++ b/article-preview-component/scss/components/_share.scss
@@ -166,6 +166,7 @@
           flex: 0 0 auto;
           text-align: left; // Changed from center to left
           margin-right: 1rem; // Increased spacing between text and social icons
+          padding-left: 1rem;
         }
 
         &__socials {
