--- a/article-preview-component/css/style.css
+++ b/article-preview-component/css/style.css
@@ -442,11 +442,10 @@ p {
     border-bottom-left-radius: var(--card-border-radius);
     border-bottom-right-radius: var(--card-border-radius);
     z-index: 90;
-    position: absolute;
-    bottom: 0;
-    left: 25px;
-    right: 0;
-    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    min-height: 64px;
   }
   .card__footer.share-active .avatar,
   .card__footer.share-active .user-info {
